2009-06-24 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: backport fix for collecting whitespace.

2009-06-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/GSRunLoopCtxt.m: Fix to send handle associated with
	event to watcher.  Corrects bitrot which had broken tcp/ip based DO.

2009-06-13 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSKeyedArchiver.h:
	* Headers/Foundation/NSArchiver.h:
	Fix error cleaning up a define.

2009-06-09 Richard Frith-Macdonald <rfm@gnu.org>

        * SSL/Source/GSSSLHandle.m: Disable v2 by default due to
        security issues.  GSPermitSSLv2 user default can enable it again.

2009-06-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: backport changes controlling when loop is run.
	It should be run if it contains any timers.

2009-06-04 Georg Fleischmann <G.Fleischmann@vhf.de>

	* Source/Additions/unicode/nextstep.h: Fixups for encoding mapping.

2009-06-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSUndoManager.m (-undo, -redo): Call -_begin instead of
	-beginUndoGrouping to avoid creation of a spurious top-level group
	while performing undo or redo operations, which was causing the
	recorded actions to be dropped silently.

	* Source/NSUndoManager.m (-beginUndoGrouping): Post
	NSUndoManagerCheckpointNotification also during undo as on OS X.

	* Source/NSUndoManager.m (-endUndoGrouping): Post
	NSUndoManagerWillCloseUndoGroupNotification before changing the
	group so that clients see the same grouping level as on OS X.

2009-05-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Use lock to prevent race condition setting up
	runloop info for thread.
	* Source/NSKeyValueObserving.m:
	Permit setters which return values.
	* Source/NSFileManager.m:
	* Source/NSBundle.m:
	Try to get the path right for loading dynamic library code on windows
	when NSExecutable doesn't have the .dll path extension.